--- a/board/src/main/resources/templates/index.html
+++ b/board/src/main/resources/templates/index.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <button onclick="create()">글쓰기</button>
-<button onclick="boardlist()">글목록</button>
+<button onclick="boardList()">글목록</button>
 
 </body>
 
 <script>
     const create = () => {
-        location.href = "/createBoard"
+        location.href = "/board/create"
     }
-    const boardlist = () => {
-        location.href = "/paging"
+    const boardList = () => {
+        location.href = "/board/paging"
     }
 
 </script>
