--- a/board/src/main/resources/templates/paging.html
+++ b/board/src/main/resources/templates/paging.html
@@ -6,42 +6,45 @@
 </head>
 <body>
 
-<button onclick="create()">글쓰기</button>
-<button onclick="home()">홈으로</button>
-
 <table>
+    <button onclick="create()"> 글쓰기</button>
+    <button onclick="home()"> 홈으로</button>
+
     <tr th:each="board: ${boardList}">
-        <td th:text="${board.getId()}"></td>
-        <td><a th:href="@{'/board/' + ${board.getId()} + '?page=' + (${boardList.number} + 1)}" th:text="${board.getTitle()}"></a></td>
-        <td th:text="${#temporals.format(board.getCreateTime(), 'yyyy-MM-dd HH:mm:ss')}"></td>
-        <td><button onclick="edit(${board.getId()})">수정</button></td>
+        <td th:text="${board.getId}"></td>
+        <td> <a th:href="@{${board.getId}|(page = ${boardList.number + 1})}" th:text="${board.getTitle()}"></a></td>
+        <td th:text="*{#temporals.format(board.getCreateTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
     </tr>
 </table>
-
 <a th:href="@{/paging(page=1)}">처음</a>
 <a th:href="${boardList.first} ? '#' : @{/paging(page=${boardList.number})}">이전</a>
 
 <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+    <!-- 현재페이지는 링크 없이 숫자만 -->
     <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
+    <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
     <span th:unless="${page == boardList.number + 1}">
         <a th:href="@{/paging(page=${page})}" th:text="${page}"></a>
     </span>
 </span>
 
+
+
+<!-- 다음 링크 활성화 비활성화
+    사용자: 2페이지, getNumber: 1, 3페이지-->
 <a th:href="${boardList.last} ? '#' : @{/paging(page=${boardList.number + 2})}">다음</a>
+<!-- 마지막 페이지로 이동 -->
 <a th:href="@{/paging(page=${boardList.totalPages})}">마지막</a>
 
+
+
+</body>
 <script>
-    function create() {
-        location.href = "/createBoard";
+    const create = () => {
+        location.href = "/board/create";
     }
     function home() {
         location.href = "/";
     }
-    function edit(id) {
-        location.href = "/board/" + id + "/edit";
-    }
 </script>
-
-</body>
 </html>
