--- a/board/src/main/resources/templates/Detail.html
+++ b/board/src/main/resources/templates/Detail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>detail</title>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <body>
 <table>
@@ -14,25 +15,90 @@
         <th>title</th>
         <td th:text="${board.getTitle}"></td>
     </tr>
-    <tr>
-        <th>Username</th>
-        <td th:text="${board.getUsername()}"></td>
-    </tr>
+    <!--tr>
+        <th>writer</th>
+        <td th:text="${board.getWriter}"></td>
+    </tr-->
     <tr>
         <th>date</th>
         <td th:text="${board.getCreateTime}"></td>
     </tr>
     <tr>
         <th>contents</th>
-        <td th:text="${board.getContent()}"></td>
+        <td th:text="${board.getContents}"></td>
     </tr>
 </table>
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
 <button onclick="deleteReq()">삭제</button>
 
+
+<!-- 댓글 작성 부분 -->
+<div id="comment-write">
+    <input type="text" id="writer" placeholder="작성자">
+    <input type="text" id="contents" placeholder="내용">
+    <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+</div>
+
+<!-- 댓글 출력 부분 -->
+<div id="comment-list">
+    <table>
+        <tr>
+            <th>댓글번호</th>
+            <th>작성자</th>
+            <th>내용</th>
+        </tr>
+        <tr th:each="comment: ${commentList}">
+            <td th:text="${comment.id}"></td>
+            <td th:text="${comment.writer}"></td>
+            <td th:text="${comment.contents}"></td>
+        </tr>
+    </table>
+</div>
 </body>
 <script th:inline="javascript">
+
+    const commentWrite = () => {
+        const jsWriter = document.getElementById("writer").value;
+        const jsContents = document.getElementById("contents").value;
+        console.log("작성자: ", jsWriter);
+        console.log("내용: ", jsContents);
+        const jsId = [[${board.id}]];
+        $.ajax({
+            // 요청방식: post, 요청주소: /comment/save, 요청데이터: 작성자, 작성내용, 게시글번호
+            type: "post",
+            url: "/comment/save",
+            data: {
+                "writer": jsWriter,
+                "contents": jsContents,
+                "boardId": jsId
+            },
+            success: function (res) {
+                console.log("요청성공", res);
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                for (let i in res) {
+                    output += "<tr>";
+                    output += "<td>" + res[i].id + "</td>";
+                    output += "<td>" + res[i].writer + "</td>";
+                    output += "<td>" + res[i].contents + "</td>";
+                    output += "</tr>";
+                }
+
+                output += "</table>";
+                // 사용자가 댓글을 작성을 마치면 입력 필드를 비워서 다음 댓글을 작성할 때 기존에 입력된 텍스트를 비움.
+                document.getElementById('comment-list').innerHTML = output;
+                document.getElementById('writer').value = '';
+                document.getElementById('contents').value = '';
+            },
+            error: function (err) {
+                console.log("요청실패", err);
+            }
+        });
+    }
+
     const listReq = () => {
         console.log("목록 요청");
         const page = [[${page}]];
@@ -46,7 +112,7 @@
     const deleteReq = () => {
         console.log("삭제 요청");
         const id = [[${board.id}]];
-        location.href = "/board/delete/id:"+id;
+        location.href = "/board/delete/" + id;
     }
 </script>
 </html>
