--- a/board/src/main/resources/templates/create.html
+++ b/board/src/main/resources/templates/create.html
@@ -11,8 +11,8 @@
         name:<input type="text" name="username">
         title:<input type="text" id="title" name="title" /><br>
         <label for="content">Content:</label>
-        <textarea id="content" name="content" cols="30" rows="10"></textarea><br><br>
-        <input type="file" name="file"><br><br>
+        <textarea id="content" name="contents" cols="30" rows="10"></textarea><br><br>
+        <input type="file" name="files" multiple><br><br>
         <input type="submit" value="글작성">
     </form>
 </body>
