--- a/board/src/main/resources/templates/Detail.html
+++ b/board/src/main/resources/templates/Detail.html
@@ -2,61 +2,98 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>detail</title>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <title>Detail</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<table>
-    <tr>
-        <th>id</th>
-        <td th:text="${board.id}"></td>
-    </tr>
-    <tr>
-        <th>title</th>
-        <td th:text="${board.getTitle}"></td>
-    </tr>
-    <!--tr>
-        <th>writer</th>
-        <td th:text="${board.getWriter}"></td>
-    </tr-->
-    <tr>
-        <th>date</th>
-        <td th:text="${board.getCreateTime}"></td>
-    </tr>
-    <tr>
-        <th>contents</th>
-        <td th:text="${board.getContents}"></td>
-    </tr>
-</table>
-<button onclick="listReq()">목록</button>
-<button onclick="updateReq()">수정</button>
-<button onclick="deleteReq()">삭제</button>
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title" th:text="${board.getTitle}"></h5>
+            <h6 class="card-subtitle mb-2 text-muted" th:text="${board.getCreateTime}"></h6>
+            <p class="card-text" th:text="${board.getContents}"></p>
 
+            <div th:if="${files != null}">
+                <h5>첨부 파일</h5>
+                <ul class="list-group">
+                    <li class="list-group-item" th:each="file : ${files}">
+                        <a th:href="@{/download/{uuid}/{filename}(uuid=${file.uuid}, filename=${file.fileName})}"><i class="fas fa-download"></i> Download</a>
+                    </li>
+                </ul>
+            </div>
 
-<!-- 댓글 작성 부분 -->
-<div id="comment-write">
-    <input type="text" id="writer" placeholder="작성자">
-    <input type="text" id="contents" placeholder="내용">
-    <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+            <button onclick="listReq()" class="btn btn-primary mt-2"><i class="fas fa-list"></i> 목록</button>
+            <button onclick="updateReq()" class="btn btn-warning mt-2"><i class="fas fa-edit"></i> 수정</button>
+            <button onclick="deleteReq()" class="btn btn-danger mt-2"><i class="fas fa-trash"></i> 삭제</button>
+        </div>
+    </div>
+
+    <!-- 댓글 작성 부분 -->
+    <div id="comment-write" class="mt-4">
+        <div class="input-group mb-3">
+            <input type="text" id="writer" class="form-control" placeholder="작성자">
+            <input type="text" id="contents" class="form-control" placeholder="내용">
+            <div class="input-group-append">
+                <button id="comment-write-btn" onclick="commentWrite()" class="btn btn-outline-secondary" type="button"><i class="fas fa-paper-plane"></i> 댓글작성</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 댓글 출력 부분 -->
+    <div id="comment-list">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>댓글번호</th>
+                <th>작성자</th>
+                <th>내용</th>
+            </tr>
+            </thead>
+            <tbody id="comment-table-body">
+            <tbody th:each="comment: ${commentList}">
+            <tr>
+                <td th:text="${comment.id}"></td>
+                <td th:text="${comment.writer}"></td>
+                <td th:text="${comment.contents}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
-
-<!-- 댓글 출력 부분 -->
-<div id="comment-list">
-    <table>
-        <tr>
-            <th>댓글번호</th>
-            <th>작성자</th>
-            <th>내용</th>
-        </tr>
-        <tr th:each="comment: ${commentList}">
-            <td th:text="${comment.id}"></td>
-            <td th:text="${comment.writer}"></td>
-            <td th:text="${comment.contents}"></td>
-        </tr>
-    </table>
-</div>
-</body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script th:inline="javascript">
+    $(document).ready(function() {
+        getCommentList();
+    });
+
+    const getCommentList = () => {
+        const boardId = [[${board.id}]];
+
+        $.ajax({
+            type: "GET",
+            url: "/comment/list/" + boardId,
+            success: function(response) {
+                console.log("댓글 목록 조회 성공", response);
+
+                let output = "";
+                for (let i = 0; i < response.length; i++) {
+                    const comment = response[i];
+                    output += "<tr>";
+                    output += "<td>" + comment.id + "</td>";
+                    output += "<td>" + comment.writer + "</td>";
+                    output += "<td>" + comment.contents + "</td>";
+                    output += "</tr>";
+                }
+
+                $("#comment-table-body").html(output);
+            },
+            error: function(error) {
+                console.log("댓글 목록 조회 실패", error);
+            }
+        });
+    }
 
     const commentWrite = () => {
         const jsWriter = document.getElementById("writer").value;
@@ -65,8 +102,7 @@
         console.log("내용: ", jsContents);
         const jsId = [[${board.id}]];
         $.ajax({
-            // 요청방식: post, 요청주소: /comment/save, 요청데이터: 작성자, 작성내용, 게시글번호
-            type: "post",
+            type: "POST",
             url: "/comment/save",
             data: {
                 "writer": jsWriter,
@@ -75,10 +111,7 @@
             },
             success: function (res) {
                 console.log("요청성공", res);
-                let output = "<table>";
-                output += "<tr><th>댓글번호</th>";
-                output += "<th>작성자</th>";
-                output += "<th>내용</th>";
+                let output = "<table class='table table-striped'>";
                 for (let i in res) {
                     output += "<tr>";
                     output += "<td>" + res[i].id + "</td>";
@@ -86,12 +119,10 @@
                     output += "<td>" + res[i].contents + "</td>";
                     output += "</tr>";
                 }
-
-                output += "</table>";
-                // 사용자가 댓글을 작성을 마치면 입력 필드를 비워서 다음 댓글을 작성할 때 기존에 입력된 텍스트를 비움.
-                document.getElementById('comment-list').innerHTML = output;
-                document.getElementById('writer').value = '';
-                document.getElementById('contents').value = '';
+                output += "</tbody></table>";
+                $("#comment-table-body").html(output);
+                $("#writer").val('');
+                $("#contents").val('');
             },
             error: function (err) {
                 console.log("요청실패", err);
@@ -104,15 +135,18 @@
         const page = [[${page}]];
         location.href = "/board/paging?page="+page;
     }
+
     const updateReq = () => {
         console.log("수정 요청");
         const id = [[${board.id}]];
         location.href = "/board/update/" + id;
     }
+
     const deleteReq = () => {
         console.log("삭제 요청");
         const id = [[${board.id}]];
         location.href = "/board/delete/" + id;
     }
 </script>
+</body>
 </html>
