--- a/board/src/main/resources/templates/create.html
+++ b/board/src/main/resources/templates/create.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Board</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+<div class="container mt-5">
+    <h2>게시글 생성</h2>
     <form action="/board/save" method="post" enctype="multipart/form-data">
-        <label for="title">게시글 생성</label> <br><br>
-
-        name:<input type="text" name="username">
-        title:<input type="text" id="title" name="title" /><br>
-        <label for="content">Content:</label>
-        <textarea id="content" name="contents" cols="30" rows="10"></textarea><br><br>
-        <input type="file" name="files" multiple><br><br>
-        <input type="submit" value="글작성">
+        <div class="form-group">
+            <label for="title">Title:</label>
+            <input type="text" class="form-control" id="title" name="title" required>
+        </div>
+        <div class="form-group">
+            <label for="content">Content:</label>
+            <textarea class="form-control" id="content" name="contents" rows="5" required></textarea>
+        </div>
+        <div class="form-group">
+            <label for="files">Files:</label>
+            <input type="file" class="form-control-file" id="files" name="files" multiple>
+        </div>
+        <button type="submit" class="btn btn-primary">글작성</button>
     </form>
+</div>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
