--- a/board/src/main/resources/templates/update.html
+++ b/board/src/main/resources/templates/update.html
@@ -2,16 +2,69 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Board</title>
+    <title>Edit Post</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-<form action="/board/update/" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="id" th:value="${board.getId()}">
-    title:<input type="text" id="title" name="title" /><br>
-    Content:<textarea id="content" name="contents" cols="30" rows="10"></textarea><br><br>
-    file:<input type="file" name="files" multiple><br><br>
-    <input type="submit" value="글수정">
-</form>
-<a href="/">취소</a>
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Edit Post</h2>
+        </div>
+        <div class="card-body">
+            <form action="/board/update" method="post" enctype="multipart/form-data">
+                <input type="hidden" name="id" th:value="${board.id}">
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input type="text" class="form-control" id="title" name="title" th:value="${board.title}" required>
+                </div>
+                <div class="form-group">
+                    <label for="content">Content:</label>
+                    <textarea class="form-control" id="content" name="contents" rows="5" required>[[${board.contents}]]</textarea>
+                </div>
+                <div th:if="${files != null}">
+                    <h5>첨부 파일</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item" th:each="file : ${files}">
+                            <div>
+                                <a th:href="@{/download/{uuid}/{filename}(uuid=${file.uuid}, filename=${file.fileName})}"><i class="fas fa-download"></i> [[${file.fileName}]]</a>
+                                <button onclick="deleteFile('[[${file.id}]]')" class="btn btn-danger btn-sm ml-2"><i class="fas fa-trash"></i></button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="form-group">
+                    <label for="files">Files:</label>
+                    <input type="file" class="form-control-file" id="files" name="files" multiple>
+                </div>
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary">Update</button>
+                    <a href="/board/detail/{id}(id=${board.id})" class="btn btn-secondary">Cancel</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script th:inline="javascript">
+    // 파일 삭제 함수
+    function deleteFile(fileId) {
+        if (confirm("파일을 삭제하시겠습니까?")) {
+            $.ajax({
+                type: "POST",
+                url: "/file/delete/" + fileId,
+                success: function(response) {
+                    // 파일 삭제 성공 시 페이지 새로고침
+                    location.reload();
+                },
+                error: function(error) {
+                    console.log("파일 삭제 실패", error);
+                }
+            });
+        }
+    }
+</script>
 </body>
+
 </html>
