--- a/board/src/main/resources/templates/update.html
+++ b/board/src/main/resources/templates/update.html
@@ -13,7 +13,7 @@
             <h2>Edit Post</h2>
         </div>
         <div class="card-body">
-            <form action="/board/update" method="post" enctype="multipart/form-data">
+            <form action="/board/update" method="post" enctype="multipart/form-data" id="updateForm">
                 <input type="hidden" name="id" th:value="${board.id}">
                 <div class="form-group">
                     <label for="title">Title:</label>
@@ -24,47 +24,59 @@
                     <textarea class="form-control" id="content" name="contents" rows="5" required>[[${board.contents}]]</textarea>
                 </div>
                 <div th:if="${files != null}">
-                    <h5>첨부 파일</h5>
+                    <h5>Attached Files</h5>
                     <ul class="list-group">
-                        <li class="list-group-item" th:each="file : ${files}">
+                        <li class="list-group-item" th:each="file : ${files}" th:id="'file-' + ${file.id}">
                             <div>
-                                <a th:href="@{/download/{uuid}/{filename}(uuid=${file.uuid}, filename=${file.fileName})}"><i class="fas fa-download"></i> [[${file.fileName}]]</a>
-                                <button onclick="deleteFile('[[${file.id}]]')" class="btn btn-danger btn-sm ml-2"><i class="fas fa-trash"></i></button>
+                                <a th:href="@{/download/{uuid}/{filename}(uuid=${file.uuid}, filename=${file.fileName})}">
+                                    <i class="fas fa-download"></i> [[${file.fileName}]]
+                                </a>
+                                <button onclick="deleteFile('${file.id}')" class="btn btn-danger btn-sm ml-2">
+                                    <i class="fas fa-trash"></i>
+                                </button>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="form-group">
-                    <label for="files">Files:</label>
-                    <input type="file" class="form-control-file" id="files" name="files" multiple>
-                </div>
+
                 <div class="text-right">
-                    <button type="submit" class="btn btn-primary">Update</button>
-                    <a href="/board/detail/{id}(id=${board.id})" class="btn btn-secondary">Cancel</a>
+                    <button type="submit" class="btn btn-primary" onclick="updatePost()">Update</button>
+                    <a href="/board/" class="btn btn-secondary">Cancel</a>
                 </div>
             </form>
         </div>
     </div>
 </div>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script th:inline="javascript">
     // 파일 삭제 함수
     function deleteFile(fileId) {
-        if (confirm("파일을 삭제하시겠습니까?")) {
+        if (confirm("Do you want to delete this file?")) {
             $.ajax({
                 type: "POST",
-                url: "/file/delete/" + fileId,
+                url: "/board/deleteFile/" + fileId,
                 success: function(response) {
-                    // 파일 삭제 성공 시 페이지 새로고침
-                    location.reload();
+                    // Remove the list item upon successful file deletion
+                    $("#file-" + fileId).remove();
                 },
                 error: function(error) {
-                    console.log("파일 삭제 실패", error);
+                    console.log("Failed to delete the file", error);
                 }
             });
         }
     }
+
+    // 업데이트 버튼 클릭 시 기존 첨부 파일을 유지
+    function updatePost() {
+        const existingFiles = $("li.list-group-item");
+        // 각 파일 목록에 대해 파일 ID를 가져와서 숨겨진 입력란에 추가
+        existingFiles.each(function() {
+            const fileId = $(this).attr("id").split("-")[1];
+            const input = "<input type='hidden' name='existingFiles' value='" + fileId + "'>";
+            $("#updateForm").append(input);
+        });
+        // 폼 제출
+        $("#updateForm").submit(); // 이 부분이 추가되었습니다.
+    }
 </script>
 </body>
-
 </html>
