--- a/board/src/main/resources/templates/index.html
+++ b/board/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         .header {
             text-align: center;
             padding: 50px 0;
-            background-image: url('/assets/img/home-bg.jpg'); /* 이미지 URL을 적용해주세요 */
+            background-image: url('/image/home-bg.jpg'); /* 이미지 URL을 적용해주세요 */
             background-size: cover;
             background-position: center;
             color: #fff;
